# HomeCtrl

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  beeper.c  beeper.h  build.sh  config.h  contactron.c  contactron.h  dht.c  dht.h  dht22.c  dht22.h  freertos_smp.patch  gate.c  gate.h  heat.c  heat.h  smart_home.c  tcp_server.c  tcp_server.h  watchdog.c  watchdog.h  watering.c  watering.h
config/down/: CMakeLists.txt
config/garden/: CMakeLists.txt  config.h
config/up/: CMakeLists.txt  config.h
dht/: dht.c
